# lotic

./: Cargo.toml  Justfile  rustfmt.toml
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: args.rs  command_processor.rs  main.rs
examples/basic-usage/: Cargo.toml
examples/basic-usage/src/: lib.rs
lib/: Cargo.toml
lib/lotic-macros/: Cargo.toml
lib/lotic-macros/src/: declare_program.rs  instruction.rs  instruction_accounts.rs  lib.rs
lotic-macros/: Cargo.toml
lotic-macros/src/: declare_program.rs  instruction.rs  instruction_accounts.rs
src/: lib.rs
tests/constraint-address/: Cargo.toml
tests/constraint-address/src/: lib.rs
tests/constraint-address/tests/: constraint-address.rs
tests/constraint-executable/: Cargo.toml
tests/constraint-executable/src/: lib.rs
tests/constraint-executable/tests/: constraint-executable.rs
tests/constraint-owner/: Cargo.toml
tests/constraint-owner/src/: lib.rs
tests/constraint-owner/tests/: constraint-owner.rs
tests/constraint-program-compute-budget/: Cargo.toml
tests/constraint-program-compute-budget/src/: lib.rs
tests/constraint-program-compute-budget/tests/: constraint-program-compute-budget.rs
tests/constraint-program-config/: Cargo.toml
tests/constraint-program-config/src/: lib.rs
tests/constraint-program-config/tests/: constraint-program-config.rs
tests/constraint-program-stake/: Cargo.toml
tests/constraint-program-stake/src/: lib.rs
tests/constraint-program-stake/tests/: constraint-program-stake.rs
tests/constraint-program-system/: Cargo.toml
tests/constraint-program-system/src/: lib.rs
tests/constraint-program-system/tests/: constraint-program-system.rs
tests/constraint-program-token/: Cargo.toml
tests/constraint-program-token/src/: lib.rs
tests/constraint-program-token/tests/: constraint-program-token.rs
tests/constraint-program-tokenkeg/: Cargo.toml
tests/constraint-program-tokenkeg/src/: lib.rs
tests/constraint-program-tokenkeg/tests/: constraint-program-tokenkeg.rs
tests/constraint-program-tokenz/: Cargo.toml
tests/constraint-program-tokenz/src/: lib.rs
tests/constraint-program-tokenz/tests/: constraint-program-tokenz.rs
tests/constraint-program-vote/: Cargo.toml
tests/constraint-program-vote/src/: lib.rs
tests/constraint-program-vote/tests/: constraint-program-vote.rs
tests/constraint-signer/: Cargo.toml
tests/constraint-sysvar-clock/: Cargo.toml
tests/constraint-sysvar-clock/src/: lib.rs
tests/constraint-sysvar-clock/tests/: constraint-sysvar-clock.rs
tests/constraint-writable/: Cargo.toml
tests/constraint-writable/src/: lib.rs
tests/constraint-writable/tests/: constraint-writable.rs
