[package]
name = "lotic-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101" }
camino = "1.1"
cargo_metadata = { version = "0.23.1" }
clap = { version = "4.5.60", features = ["derive"] }
heck = { version = "0.5.0" }
proc-macro2 = "1.0.106"
quote = { version = "1.0.44" }
serde = "1.0.228"
serde_json = "1.0.149"
syn = { version = "2.0.116", features = ["full", "extra-traits"] }
toml = { version = "0.9.8" }
walkdir = { version = "2.5.0" }
