[package]
name = "basic-usage"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lotic = { path = "../.." }
# pinocchio-log = { version = "0.5.1" }
# solana-address = { version = "2.2", features = ["decode"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
