[package]
name = "test-constraint-program-tokenkeg"
version = "0.0.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lotic = { path = "../../lib" }

[dev-dependencies]
mollusk-svm = { version = "0.11.0" }
solana-sdk = { version = "3.0.0" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
