[package]
name = "test-constraint-writable"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
lotic = { path = "../../" }

[dev-dependencies]
mollusk-svm = { version = "0.10.1" }
solana-sdk = { version = "3.0.0" }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
